--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ flask-migrate = "==4.0.2"
 flask-socketio = "==5.3.6"
 flask-sqlalchemy = "==3.0.2"
 flask-wtf = "==1.1.1"
-gevent = "==23.9.1"
+gevent = "*"
 greenlet = "==2.0.1"
 gunicorn = "==20.1.0"
 h11 = "==0.14.0"
