--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ jinja2==3.1.2; python_version >= '3.7'
 jmespath==1.0.1; python_version >= '3.7'
 mako==1.2.4; python_version >= '3.7'
 markupsafe==2.1.2; python_version >= '3.7'
-python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==0.21.0; python_version >= '3.7'
 python-editor==1.0.4
 python-engineio==4.7.1; python_version >= '3.6'
@@ -31,7 +31,7 @@ python-socketio==5.9.0; python_version >= '3.6'
 s3transfer==0.7.0; python_version >= '3.7'
 setuptools==68.2.2; python_version >= '3.8'
 simple-websocket==0.10.1; python_version >= '3.6'
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==1.4.46; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 urllib3==1.26.16; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 werkzeug==2.2.2; python_version >= '3.7'
