--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ flask = "==2.2.5"
 flask-cors = "==3.0.10"
 flask-login = "==0.6.2"
 flask-migrate = "==4.0.2"
-flask-socketio = "==5.3.6"
+flask-socketio = "*"
 flask-sqlalchemy = "==3.0.2"
 flask-wtf = "==1.1.1"
 greenlet = "==2.0.1"
